eros: mojang account adding

--- a/src/main/resources/assets/minosoft/eros/main/account/add/mojang.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/account/add/mojang.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="200.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16"> <!--fx:controller="de.bixilon.minosoft.gui.eros.main.account.add.MojangAddController" -->
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="240.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16"> <!--fx:controller="de.bixilon.minosoft.gui.eros.main.account.add.OfflineAddController" -->
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS"/>
         </columnConstraints>
         <rowConstraints>
+            <RowConstraints vgrow="NEVER"/>
             <RowConstraints vgrow="NEVER"/>
             <RowConstraints vgrow="NEVER"/>
             <RowConstraints vgrow="NEVER"/>
@@ -22,7 +23,7 @@
             <GridPane.margin>
                 <Insets bottom="10.0" left="5.0" right="5.0" top="10.0"/>
             </GridPane.margin>
-            <Text text="Add offline account"/>
+            <Text text="Add mojang account"/>
         </TextFlow>
         <TextFlow fx:id="descriptionFX" GridPane.rowIndex="1">
             <padding>
@@ -31,7 +32,7 @@
             <GridPane.margin>
                 <Insets bottom="15.0" right="5.0" top="5.0"/>
             </GridPane.margin>
-            <Text text="Please enter the username for your account"/>
+            <Text text="Please enter your mojang email (or for legacy accounts their username) and your password to continue"/>
         </TextFlow>
         <GridPane GridPane.rowIndex="2">
             <columnConstraints>
@@ -40,20 +41,32 @@
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints valignment="CENTER" vgrow="NEVER"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="NEVER"/>
             </rowConstraints>
-            <TextFlow fx:id="usernameLabelFX">
+            <TextFlow fx:id="emailLabelFX">
                 <GridPane.margin>
                     <Insets bottom="5.0" left="5.0" right="30.0" top="5.0"/>
                 </GridPane.margin>
-                <Text text="Username"/>
+                <Text text="Email"/>
             </TextFlow>
-            <TextField fx:id="usernameFX" promptText="Testuser" GridPane.columnIndex="1">
+            <TextField fx:id="emailFX" promptText="user@example.org" GridPane.columnIndex="1">
                 <GridPane.margin>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
             </TextField>
+            <TextFlow fx:id="passwordLabelFX" GridPane.rowIndex="1">
+                <GridPane.margin>
+                    <Insets bottom="5.0" left="5.0" right="30.0" top="5.0"/>
+                </GridPane.margin>
+                <Text text="Password"/>
+            </TextFlow>
+            <PasswordField fx:id="passwordFX" promptText="********" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <GridPane.margin>
+                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+                </GridPane.margin>
+            </PasswordField>
         </GridPane>
-        <GridPane GridPane.rowIndex="4">
+        <GridPane GridPane.rowIndex="5">
             <columnConstraints>
                 <ColumnConstraints hgrow="ALWAYS"/>
                 <ColumnConstraints hgrow="NEVER"/>
@@ -67,11 +80,17 @@
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
             </Button>
-            <Button disable="true" onAction="#add" fx:id="addButtonFX" text="Add" GridPane.columnIndex="2">
+            <Button fx:id="loginButtonFX" disable="true" onAction="#login" text="Login" GridPane.columnIndex="2">
                 <GridPane.margin>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
             </Button>
         </GridPane>
+        <TextFlow fx:id="errorFX" GridPane.rowIndex="3">
+            <GridPane.margin>
+                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
+            </GridPane.margin>
+            <Text text="Unknown exception: This is just a dummy"/>
+        </TextFlow>
     </GridPane>
 </HBox>
