--- a/src/main/resources/assets/minosoft/eros/main/account/account_type_card.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/account/account_type_card.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="80.0" prefWidth="190.0" xmlns="http://javafx.com/javafx/16" fx:controller="de.bixilon.minosoft.gui.eros.main.account.AccountTypeCardController">
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="80.0" xmlns="http://javafx.com/javafx/16" fx:controller="de.bixilon.minosoft.gui.eros.main.account.AccountTypeCardController">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="NEVER"/>
