--- a/src/main/resources/assets/minosoft/eros/main/play/server_type_card.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/play/server_type_card.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="80.0" prefWidth="190.0" xmlns="http://javafx.com/javafx/16" fx:controller="de.bixilon.minosoft.gui.eros.main.play.server.type.ServerTypeCardController">
+<HBox xmlns:fx="http://javafx.com/fxml/1" fx:id="root" prefHeight="80.0" xmlns="http://javafx.com/javafx/16" fx:controller="de.bixilon.minosoft.gui.eros.main.play.server.type.ServerTypeCardController">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="NEVER"/>
@@ -27,6 +27,13 @@
                 </GridPane.margin>
                 <Text text="Text 1"/>
             </TextFlow>
+            <columnConstraints>
+                <ColumnConstraints/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints/>
+                <RowConstraints/>
+            </rowConstraints>
         </GridPane>
         <FontIcon fx:id="iconFX" iconLiteral="fas-exclamation-triangle" iconSize="50">
             <GridPane.margin>
