--- a/src/main/resources/assets/minosoft/eros/crash/crash_screen.fxml
+++ b/src/main/resources/assets/minosoft/eros/crash/crash_screen.fxml
@@ -18,11 +18,11 @@
             <RowConstraints maxHeight="Infinity" vgrow="ALWAYS"/>
             <RowConstraints vgrow="NEVER"/>
         </rowConstraints>
-        <Text text="Minosoft quit unexpectedly">
+        <Label text="Minosoft quit unexpectedly">
             <font>
                 <Font name="System Bold" size="19.0"/>
             </font>
-        </Text>
+        </Label>
         <TextFlow GridPane.rowIndex="1">
             <Label text="A critical error in minosoft occurred, that forced it it exit. If this error persists, please open an issue here: " wrapText="true"/>
             <Hyperlink onAction="#openURL" text="https://gitlab.bixilon.de/bixilon/minosoft/-/issues/" wrapText="true"/>
