--- a/src/main/resources/assets/minosoft/eros/main/main.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/main.fxml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.*?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.Text?>
 <?import org.kordamp.ikonli.javafx.*?>
-<HBox xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" fx:controller="de.bixilon.minosoft.gui.eros.main.MainErosController">
+<HBox xmlns:fx="http://javafx.com/fxml/1" prefHeight="600.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/16" fx:controller="de.bixilon.minosoft.gui.eros.main.MainErosController">
     <GridPane HBox.hgrow="ALWAYS">
         <columnConstraints>
             <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0"/>
@@ -21,9 +21,6 @@
                 <ColumnConstraints hgrow="ALWAYS" maxWidth="Infinity" minWidth="0.0"/>
                 <ColumnConstraints hgrow="NEVER" maxWidth="Infinity" minWidth="10.0"/>
             </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-            </rowConstraints>
             <GridPane>
                 <columnConstraints>
                     <ColumnConstraints hgrow="NEVER"/>
@@ -34,7 +31,7 @@
                 </rowConstraints>
                 <ImageView fx:id="logoFX" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
                 </ImageView>
-                <Text fx:id="versionTextFX" text="Minosoft 0.1" GridPane.columnIndex="1"/>
+                <Label fx:id="versionTextFX" text="Minosoft 0.1" GridPane.columnIndex="1"/>
                 <GridPane.margin>
                     <Insets right="20.0"/>
                 </GridPane.margin>
@@ -77,7 +74,7 @@
                     </GridPane.margin>
                 </FontIcon>
             </GridPane>
-            <GridPane onMouseClicked="#openAccountActivity" GridPane.columnIndex="3">
+            <GridPane onMouseClicked="#openAccountActivity" styleClass="context-menu" GridPane.columnIndex="3">
                 <columnConstraints>
                     <ColumnConstraints hgrow="NEVER" minWidth="10.0"/>
                     <ColumnConstraints hgrow="NEVER"/>
@@ -90,7 +87,10 @@
                         <Insets right="5.0"/>
                     </GridPane.margin>
                 </ImageView>
-                <Text fx:id="accountNameFX" text="Account" GridPane.columnIndex="1"/>
+                <Label fx:id="accountNameFX" text="Account" GridPane.columnIndex="1"/>
+                <padding>
+                    <Insets bottom="4.0" left="4.0" right="4.0" top="4.0"/>
+                </padding>
             </GridPane>
             <GridPane.margin>
                 <Insets bottom="3.0" left="5.0" right="5.0" top="3.0"/>
