eros: default design: minimal darker

--- a/src/main/resources/assets/minosoft/eros/style.css
+++ b/src/main/resources/assets/minosoft/eros/style.css
@@ -21,7 +21,7 @@
     -secondary-light-color: #566171;
     -secondary-dark-color: #03111f;
     -primary-text-color: #000000;
-    -secondary-text-color: #ffffff;
+    -secondary-text-color: #f9f9f9;
     -secondary-light-light-color: #868191;
 }
 
