fix style font color, fix GitInfo intend, wip reset webview

--- a/src/main/resources/assets/minosoft/eros/style.css
+++ b/src/main/resources/assets/minosoft/eros/style.css
@@ -198,6 +198,7 @@
 
 .list-cell {
     -fx-background-color: -secondary-color;
+    -fx-text-fill: -secondary-text-color;
 }
 
 .list-cell:selected {
