--- a/src/main/resources/assets/minosoft/eros/main/account/account.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/account/account.fxml
@@ -41,7 +41,7 @@
                 <rowConstraints>
                     <RowConstraints vgrow="NEVER"/>
                 </rowConstraints>
-                <Button fx:id="addButtonFX" mnemonicParsing="false" text="Add" GridPane.columnIndex="1">
+                <Button fx:id="addButtonFX" text="Add" GridPane.columnIndex="1">
                     <GridPane.margin>
                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                     </GridPane.margin>
