rename and fix some eros bugs

--- a/src/main/resources/assets/minosoft/eros/dialog/modify_server.fxml
+++ b/src/main/resources/assets/minosoft/eros/dialog/modify_server.fxml
@@ -119,7 +119,7 @@
                 <RowConstraints/>
                 <RowConstraints vgrow="NEVER"/>
             </rowConstraints>
-            <Button fx:id="updateServerButtonFX" defaultButton="true" disable="true" onAction="#update" text="Update server" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <Button fx:id="modifyServerButtonFX" defaultButton="true" disable="true" onAction="#modify" text="Update server" GridPane.columnIndex="2" GridPane.rowIndex="1">
                 <GridPane.margin>
                     <Insets bottom="10.0" left="5.0" right="10.0" top="5.0"/>
                 </GridPane.margin>
