--- a/src/main/resources/assets/minosoft/eros/main/account/add/mojang.fxml
+++ b/src/main/resources/assets/minosoft/eros/main/account/add/mojang.fxml
@@ -80,7 +80,7 @@
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
             </Button>
-            <Button fx:id="loginButtonFX" disable="true" onAction="#login" text="Login" GridPane.columnIndex="2">
+            <Button fx:id="loginButtonFX" disable="true" onAction="#login" text="Login" defaultButton="true" GridPane.columnIndex="2">
                 <GridPane.margin>
                     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
                 </GridPane.margin>
