--- a/src/main/resources/assets/minosoft/eros/dialog/connection/verify_assets.fxml
+++ b/src/main/resources/assets/minosoft/eros/dialog/connection/verify_assets.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ProgressBar?>
@@ -23,6 +22,9 @@
         </VBox.margin>
         <TextFlow fx:id="headerFX">
             <Text text="Minosoft is downloading assets..."/>
+            <GridPane.margin>
+                <Insets bottom="10.0"/>
+            </GridPane.margin>
         </TextFlow>
         <GridPane GridPane.rowIndex="1">
             <columnConstraints>
